Fix hover z-index problems

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -225,6 +225,10 @@ body {
   &.shown {
     display:inherit !important;
   }
+
+  &:hover {
+    z-index:3;
+    }
   
   .item-body{
     width: 2*@gridGutterWidth + 3*@gridColumnWidth;
